--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
@@ -26,11 +30,16 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.3.0",
+    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.0.3",
     "sass": "^1.0.0-beta.1",
     "sass-loader": "^6.0.6",
