--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-google-maps": "^7.1.0",
+    "react-images": "^0.5.4",
     "react-redux": "^5.0.5",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.0",
