--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "material-design-color": "^2.3.2"
   },
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
