--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   },
   "author": "Bernix01 <gbernal096@gmail.com> (https://github.com/bernix01) and jlmasson <jlmasson@espol.edu.ec> (https://github.com/jlmasson)",
   "license": "MIT",
-  "dependencies": {
-    "axios": "^0.16.2",
-    "material-design-color": "^2.3.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
@@ -25,7 +22,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
@@ -35,6 +34,7 @@
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
+    "material-design-color": "^2.3.2",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
