--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "history": "^4.6.3",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
